--- a/mean/package.json
+++ b/mean/package.json
@@ -13,22 +13,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.5",
+    "@angular/cli": "^9.0.5",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
+    "@angular/compiler-cli": "^9.0.5",
     "@angular/core": "~9.0.5",
     "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.4",
+    "mysql": "^2.18.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@angular/cli": "^9.0.5",
-    "@angular/compiler-cli": "^9.0.5",
-    "@angular/http": "^6.0.3"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.5",
