online mode false

--- a/spigot/server.properties
+++ b/spigot/server.properties
@@ -39,7 +39,7 @@ white-list=false
 rcon.password=
 generate-structures=true
 max-build-height=256
-online-mode=true
+online-mode=false
 level-seed=
 use-native-transport=true
 prevent-proxy-connections=false
